--- a/style.css
+++ b/style.css
@@ -83,6 +83,14 @@ input::-webkit-inner-spin-button {
   color: white;
   box-shadow: 0 1px 30px 0 rgba(0, 0, 0, 0.3);
 }
+.buttons{
+  width: 50%;
+  display: flex;
+  gap: 1rem;
+  margin: auto;
+  justify-content: center;
+  align-items: center;
+}
 .btn{
   width: 3rem;
   height: 3rem;
@@ -97,6 +105,12 @@ input::-webkit-inner-spin-button {
 }
 .btn:hover{
   box-shadow: 0 4px 22px 2px rgba(0,0,0,0.4);
+}
+.icon{
+  background-color: transparent;
+  width: 1.6rem;
+  justify-content: center;
+  margin: auto;
 }
 .set-timer-btn{
   background-color: rgb(27, 147, 202);
