--- a/style.css
+++ b/style.css
@@ -124,3 +124,9 @@ input::-webkit-inner-spin-button {
   background-color: rgb(234, 121, 40);
   margin-left: .4rem;
 }
+
+@media only screen and (max-width: 450px){
+  .buttons{
+  width: 90%;
+  }
+}
